--- a/MyApplication/settings.gradle
+++ b/MyApplication/settings.gradle
@@ -1,2 +1,23 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+rootProject.name = "My Application"
 include ':app'
-rootProject.name='My Application'
+include ':core'
+include ':feature-home'
+include ':feature-market'
+include ':feature-trading'
+include ':feature-wealth'
+include ':feature-profile'
